2: added put operation
